[package]
name = "owapi"
description = "Overwatch JSON API bindings for Rust"
documentation = "https://rawcdn.githack.com/nabijaczleweli/OWAPI.rs/doc/owapi/index.html"
repository = "https://github.com/nabijaczleweli/OWAPI.rs"
readme = "README.md"
keywords = ["game", "overwatch", "api"]
categories = ["api-bindings"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "2.0.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "caemor <caemor@users.noreply.github.com>"]
exclude = ["*.enc"]


[dependencies]
serde_derive = "0.9"
serde_json = "0.9"
reqwest = "0.5"
serde = "0.9"
